<resources>
    <string name="app_name">ApiCal</string>

    <string name="eventList">Events</string>
    <string name="createevents">Create</string>
    <!-- Main Page -->
    <string name="login_name">Login</string>
    <string name="imageViewPlaceholderLogo">Placeholder Logo</string>
    <string name="placeholder_username">Name</string>
    <string name="placeholder_password">Password</string>
    <string name="newToAppMessage">New? Signup Rockstar!!!</string>

    <!-- Sign up Page -->
    <string name="signUp_FirstName">First Name</string>
    <string name="signUp_LastName">Last Name</string>
    <string name="signUp_Email">Email</string>
    <string name="signUp_Password">Password</string>
    <string name="signUp_Button">Sign Up</string>
    <string name="title_activity_dashboard_home">DashboardHome</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashboard_homev2">DashboardHomev2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="calendar">Calendar</string>
    <string name="title_activity_team_page_view_v2">TeamPageViewV2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
